# terranote-adapter-whatsapp

./: .gitignore  COMO-VER-LOGS.md  README.md  USAR-INFRA.md  docker-compose.e2e.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: lychee.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/routes/: callbacks.py  health.py  webhook.py
app/clients/: whatsapp.py
app/models/: interaction.py
app/services/: core_client.py  webhook_service.py
deploy/: README.md  check-server.sh  diagnose-webhook.sh  install-on-server.sh  production-install.sh  setup-local.sh  start-server.sh  verify-message-flow.sh  verify-server.sh
docs/: TODO-CORE-HELP-ENDPOINT.md  cloudflare-dns-setup.md  cloudflared-setup.md  configure-core-callback.md  configure-icebreaker-commands.md  core-help-endpoint.md  deployment-production.md  fix-core-connection.md  fix-core-service.md  fix-expired-token.md  integration-guide.md  migrate-to-infra.md  quick-start-facebook.md  test-welcome-message.md  troubleshooting-webhook.md  verificar-flujo-mensajes.md  verify-callback.md  verify-note-creation.md  webhook-setup-guide.md  whatsapp-business-setup.md
src/terranote_adapter_whatsapp/: __init__.py  config.py  main.py  settings.py
src/terranote_adapter_whatsapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/terranote_adapter_whatsapp/clients/: __init__.py  core.py  whatsapp.py
src/terranote_adapter_whatsapp/routes/: __init__.py  callbacks.py  (+2 more)
tests/: conftest.py  test_callbacks.py  test_message_processor.py  test_webhook.py
(+7 files in other folders)
